# mc-control-plane

./: .gitignore  .markdownlint-cli2.yaml  Cargo.toml  README.md  main.py  pyproject.toml
crates/control-cli/: Cargo.toml
crates/control-cli/src/: main.rs
crates/control-plane/: Cargo.toml  build.rs
crates/control-plane-protocol/: Cargo.toml
crates/control-plane-protocol/src/: ids.rs  lib.rs  resources.rs  rpc.rs
crates/control-plane/migrations/control-plane/: 0001_initial.sql
crates/control-plane/migrations/fake-provider/: 0001_initial.sql
crates/control-plane/src/: config.rs  controller.rs  diagnostics.rs  domain.rs  error.rs  main.rs  rpc.rs  storage.rs
crates/control-plane/src/provider/: fake.rs  mod.rs
crates/host-agent/: Cargo.toml
crates/host-agent/src/: main.rs
deploy/single-node/: Caddyfile.example  config.example.toml  install.sh  mc-control-plane-host-api.service  mc-control-plane-reconciler.service  mc-control-plane.target  secrets.env.example
docs/: README.md  architecture.md  cost-control-direction.md  current-implementation.md  failure-model.md  first-implementation-plan.md  host-claim-spec.md  host-control-milestone.md  host-management-direction.md  implementation-foundation.md  next-steps.md  normal-operations.md  open-questions.md  operational-mvp.md  project-direction.md  project-structure.md  state-machines.md  terminology.md
docs/checkpoints/: README.md
docs/checkpoints/host-control-v1/: README.md  architecture.md  implementation.md  open-questions.md
docs/decisions/: 0001-rebuild-foundation-in-rust.md  0001-rust-foundation.md  0001-use-restic.md  0002-no-block-storage-volume.md  0002-single-daemon-and-rpc-clients.md  0002-use-a-modular-monolith.md  0003-controller-based-host-management.md  0003-make-every-interface-an-rpc-client.md  0003-reliability-scope.md  0004-connect-layers-with-claims-and-controllers.md  0004-json-rpc-2.md  0004-use-sqlite.md  0005-host-subsystem-owns-host-identity.md  0005-no-development-compatibility.md  0005-use-stepwise-reconciler.md  0006-passwordless-restic-repositories.md  0006-use-json-rpc-and-openrpc.md  0006-use-official-linode-sdk.md  0007-naming-and-initial-workspace.md  0007-use-mtls-and-private-pki.md  0007-use-quadlet-on-debian-13.md  0008-local-rpc-http2-over-unix-socket.md  0008-record-external-effects-as-durable-activities.md  0008-use-outbound-host-agent.md  0009-disable-local-disk-encryption.md  0009-hostclaim-allocatable-resources.md  0009-use-sqlite-with-a-single-application-owner.md  0010-akamai-native-host-model.md  0010-separate-host-retention-policy.md  0010-use-versioned-host-protocol.md  0011-critical-failure-and-cost-controller.md  0011-derive-run-enrollment.md  0011-no-compatibility-before-stable-release.md  0012-deliver-ephemeral-data-leases.md  0012-fatal-incidents.md  0013-use-passwordless-restic-repositories.md  0014-pin-and-health-gate-paper-quadlet.md  0015-use-dedicated-minecraft-identity.md  0016-serialize-application-operations.md  0017-run-private-single-node-services.md  (+1 more)
docs/gates/: 01-infra-lifecycle.md  02-host-foundation.md  03-durable-orchestration.md  04-data-lifecycle.md  05-minecraft-lifecycle.md
docs/history/: python-prototype.md
docs/plans/: checkpoint-host-control.md  implementation-sequence.md  open-questions.md  roadmap.md  validation-strategy.md
docs/specification/: architecture.md  controller-model.md  failure-model.md  host-management.md  identity-and-pki.md  persistence.md  resource-model.md  rpc.md  security.md  terminology.md
host_agent/: pyproject.toml
host_agent/src/mccp_host_agent/: __init__.py  __main__.py  agent.py  client.py  config.py  journal.py  main.py  runtime.py
src/mc_control_plane/: __init__.py  __main__.py  config.py
src/mc_control_plane/application/: __init__.py  data_lease.py  gate3_cleanup.py  gate4.py  gate5.py  host_gate2.py  host_protocol.py  reconciler.py  support.py
src/mc_control_plane/domain/: errors.py  models.py  states.py
tests/: conftest.py  fakes.py
tests/host_agent/: test_agent.py  test_config.py  test_journal.py  test_runtime.py
tests/integration/persistence/: test_host_protocol.py  test_sqlite.py
tests/unit/: test_config.py
tests/unit/adapters/: test_cli.py  test_durable_host.py  test_host_api.py  test_host_cloud_init.py  test_linode_compute.py  test_linode_gate1.py  test_linode_gate1_cleanup.py  test_linode_gate2.py  test_r2_storage.py
tests/unit/application/: test_gate3_cleanup.py  test_gate4.py  test_gate5.py  test_host_gate2.py  test_host_protocol_version.py  test_normal_lifecycle.py  test_reconciler.py  test_start.py
tests/unit/domain/: test_models.py
(+30 files in other folders)
