[workspace]
resolver = "3"
members = [
    "crates/control-plane-protocol",
    "crates/control-plane",
    "crates/host-agent",
    "crates/control-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[workspace.dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4.6", features = ["derive", "env"] }
http = "1"
http-body-util = "0.1"
hyper = { version = "1.11", features = ["client", "server", "http2"] }
hyper-util = { version = "0.1", features = ["service", "tokio"] }
jiff = { version = "0.2", features = ["serde"] }
jsonrpsee = { version = "0.26", features = ["server"] }
parse-size = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "sqlite-bundled",
    "migrate",
    "macros",
    "uuid",
    "json",
] }
thiserror = "2"
tokio = { version = "1.53", features = [
    "fs",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = { version = "0.5", features = ["limit", "timeout", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v7"] }
