[project]
name = "mccp-host-agent"
version = "0.3.2"
description = "Typed execution-host agent for mc-control-plane"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
mccp-host-agent = "mccp_host_agent.main:main"

[build-system]
requires = ["uv_build>=0.11.31,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "mccp_host_agent"
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM", "RUF"]
