[package]
name = "control-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "control"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
control-plane-protocol = { path = "../control-plane-protocol" }
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
parse-size.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
thiserror.workspace = true
